# eit-cobod

./: .gitignore  CMakeLists.txt  Plugin.cpp  Plugin.hpp  Plugin.json  README.md  main.cpp  rwsettings.xml  ur_control.cpp  ur_control.hpp
build-eit-cobod-Desktop-Default/: CMakeCache.txt  cmake_install.cmake  ur_rtde_cmake_example  ur_rtde_cmake_example.cbp
polyline/: polyline_EIT.py
workcell/: Scene.wc.xml  SceneCollisionSetup.prox.xml  assimp_log.txt  rwsettings.xml  show_pcd.sh  test.pcd
workcell/devices/UR-6-85-5-A/: Device.wc.xml
workcell/devices/UR5e_2018/: UR5e.xml
workcell/objects/: 305rod.mtl  bottom_plate.stl  feeding_sys.mtl
workcell/objects/Festo/: gripper.stl
workcell/objects/Obstacle/: box.mtl
workcell/objects/Wall/: wall.mtl  wall_0.01.stl
workcell/objects/camera/: camera.stl
workcell/objects/gripper/: Montagem-da-garra-festo.stl  Montagem-da-garra-festo_0.001_scale.stl  gripper.step  gripper.stl
workcell/objects/table/: Sigmund_table.mtl
workcell/objects/table2/: Sigmund_table.ipt  Sigmund_table.mtl  Sigmund_table.stl
workcell/objects/table2/OldVersions/: Sigmund_table.0008.ipt  Sigmund_table_2.0001.ipt
